--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	
 	<script>
 		function doPopup(cntId){
-			const cntUrl = "https://2monsterslab.github.io/miraen_webgl/"+cntId+".html";
+			const cntUrl = "https://icepecter.github.io/miraen_webgl/"+cntId+".html";
 			let winWidth = 1363;
 			let winHeight = 952;
 			let winSize;
