--- a/b452002020/index.html
+++ b/b452002020/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/b452002020.loader.js";
+      var loaderUrl = buildUrl + "/새 폴더 (3).loader.js";
       var config = {
-        dataUrl: buildUrl + "/b452002020.data.unityweb",
-        frameworkUrl: buildUrl + "/b452002020.framework.js.unityweb",
-        codeUrl: buildUrl + "/b452002020.wasm.unityweb",
+        dataUrl: buildUrl + "/새 폴더 (3).data.unityweb",
+        frameworkUrl: buildUrl + "/새 폴더 (3).framework.js.unityweb",
+        codeUrl: buildUrl + "/새 폴더 (3).wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Var",
